@@ -4019,42 +4019,69 @@ void resurrect_player(int Ind)
 	p_ptr->window |= (PW_SPELL);
 }
 
+void del_quest(int id){
+	int i;
+	for(i=0; i<20; i++){
+		if(quests[i].active && quests[i].id==id){
+			quests[i].active=0;
+			quests[i].id=0;
+			quests[i].type=0;
+		}
+	}
+}
+
 void kill_quest(int Ind){
 	int i;
 	s16b id;
 	player_type *p_ptr=Players[Ind], *q_ptr;
 	char temp[160];
 
-	sprintf(temp,"\377y%s has won the %s quest!", p_ptr->name, r_name+r_info[p_ptr->quest_type].name);
-	msg_broadcast(Ind, temp);
-	msg_format(Ind, "\377yYou have won the %s quest!", r_name+r_info[p_ptr->quest_type].name);
 	id=p_ptr->quest_id;
+	sprintf(temp,"\377y%s has won the %s quest!", p_ptr->name, r_name+r_info[quests[id].type].name);
+	msg_broadcast(Ind, temp);
+	msg_format(Ind, "\377yYou have won the %s quest!", r_name+r_info[quests[id].type].name);
 	for(i=1; i<=NumPlayers; i++){
 		q_ptr=Players[i];
 		if(q_ptr && q_ptr->quest_id==id){
 			q_ptr->quest_id=0;
 			q_ptr->quest_num=0;
-			q_ptr->quest_type=0;
 		}
 	}
+	del_quest(id);
 }
 
-int questid=1;
+s16b questid=1;
 
-void add_quest(s16b type, s16b num, int midlevel){
-	int i;
+bool add_quest(s16b type, s16b num, int midlevel){
+	int i, added=0;
 	player_type *q_ptr;
+
+	for(i=0; i<20; i++){
+		if(!quests[i].active){
+			quests[i].active=1;
+			quests[i].id=questid;
+			quests[i].type=type;
+			added=1;
+			break;
+		}
+	}
+	if(!added)
+		return(FALSE);
+	added=0;
+
 	for(i=1; i<NumPlayers; i++){
 		q_ptr=Players[i];
 		if(q_ptr && !q_ptr->quest_id){
 			if(ABS(q_ptr->lev-midlevel)>5) continue;
-			q_ptr->quest_id=questid++;
-			q_ptr->quest_type=type;
+			q_ptr->quest_id=questid;
 			q_ptr->quest_num=num;
-			msg_print(i, "\377oYou have been added to a quest!");
-			msg_format(i, "\377oFind and kill %d %s before any other player!", num, r_name+r_info[type].name);
+			msg_print(i, "\377oYou have been given a quest\377y!");
+			msg_format(i, "\377oFind and kill \377y%d \377g%s \377obefore any other player\377y!", num, r_name+r_info[type].name);
+			added++;
 		}
 	}
+	if(!added) del_quest(questid);
+	questid++;
 	if(questid==0) questid=1;
 }
 
@@ -4190,7 +4217,7 @@ bool mon_take_hit(int Ind, int m_idx, int dam, bool *fear, cptr note)
 		/* Generate treasure */
 		if(!m_ptr->clone){
 			monster_death(Ind, m_idx);
-			if(p_ptr->quest_id && m_ptr->r_idx==p_ptr->quest_type){
+			if(p_ptr->quest_id && m_ptr->r_idx==quests[p_ptr->quest_id].type){
 				p_ptr->quest_num--;
 				if(p_ptr->quest_num==0){
 					kill_quest(Ind);
